update to parsedownextra
Signed-off-by: Cody Baker <cody@codyrobert.com>

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
 		"vendor-dir": "api/vendor"
 	},
 	"require": {
-		"erusev/parsedown": "dev-master"
+		"erusev/parsedown-extra": "dev-master"
 	}
 }
